--- a/cloudformation-template.yml
+++ b/cloudformation-template.yml
@@ -1,166 +1,163 @@
 ---
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: Create a 3-tier Architecture
-
 Parameters:
   VpcCidr:
     Type: String
     Default: 10.0.0.0/16
-
 Resources:
-  # VPC
   VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: !Ref VpcCidr
+      CidrBlock:
+        Ref: VpcCidr
       EnableDnsSupport: true
       EnableDnsHostnames: true
-
-  # Public Subnets
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       CidrBlock: 10.0.1.0/24
       AvailabilityZone: us-east-1a
       MapPublicIpOnLaunch: true
-
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       CidrBlock: 10.0.2.0/24
       AvailabilityZone: us-east-1b
       MapPublicIpOnLaunch: true
-
-  # Private Subnets
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       CidrBlock: 10.0.3.0/24
       AvailabilityZone: us-east-1a
-
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       CidrBlock: 10.0.4.0/24
       AvailabilityZone: us-east-1b
-
-  # Public Route Table
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref VPC
-
-  # Private Route Table
+      VpcId:
+        Ref: VPC
   PrivateRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref VPC
-
-  # Public Route Table Association
+      VpcId:
+        Ref: VPC
   PublicSubnetRouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PublicSubnet1
-      RouteTableId: !Ref PublicRouteTable
-
+      SubnetId:
+        Ref: PublicSubnet1
+      RouteTableId:
+        Ref: PublicRouteTable
   PublicSubnetRouteTableAssociation2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PublicSubnet2
-      RouteTableId: !Ref PublicRouteTable
-
-  # Private Route Table Association
+      SubnetId:
+        Ref: PublicSubnet2
+      RouteTableId:
+        Ref: PublicRouteTable
   PrivateSubnetRouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PrivateSubnet1
-      RouteTableId: !Ref PrivateRouteTable
-
+      SubnetId:
+        Ref: PrivateSubnet1
+      RouteTableId:
+        Ref: PrivateRouteTable
   PrivateSubnetRouteTableAssociation2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PrivateSubnet2
-      RouteTableId: !Ref PrivateRouteTable
-
-  # EC2 Web Server Security Group
+      SubnetId:
+        Ref: PrivateSubnet2
+      RouteTableId:
+        Ref: PrivateRouteTable
   EC2WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: EC2 Web Server Security Group
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: '80'
-          ToPort: '80'
+          FromPort: "80"
+          ToPort: "80"
           CidrIp: 0.0.0.0/0
-
-  # EC2 Application Server Security Group
   EC2ApplicationServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: EC2 Application Server Security Group
-      VpcId: !Ref VPC
+      VpcId:
+        Ref: VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: '80'
-          ToPort: '80'
-          SourceSecurityGroupId: !Ref EC2WebServerSecurityGroup
-
-  # Auto Scaling Group for Web Tier
+          FromPort: "80"
+          ToPort: "80"
+          SourceSecurityGroupId:
+            Ref: EC2WebServerSecurityGroup
   ASGWebTier:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      VPCZoneIdentifier: 
-        - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
-      LaunchConfigurationName: !Ref LaunchConfigWebTier
-      MinSize: '2'
-      MaxSize: '2'
-
-  # Launch Configuration for Web Tier
+      VPCZoneIdentifier:
+        - Ref: PublicSubnet1
+        - Ref: PublicSubnet2
+      LaunchConfigurationName:
+        Ref: LaunchConfigWebTier
+      MinSize: "2"
+      MaxSize: "2"
   LaunchConfigWebTier:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
-      ImageId: <AMI ID>
+      ImageId:
+        Ref: ami-005f9685cb30f234b
       InstanceType: t2.micro
       SecurityGroups:
-        - !Ref EC2WebServerSecurityGroup
-
-  # MySQL RDS Database
-  DB:
-    Type: AWS::RDS::DBInstance
+        - Ref: EC2WebServerSecurityGroup
+  ASGAppTier:
+    Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      DBName: mysqldb
-      DBInstanceClass: db.t2.micro
-      Engine: MySQL
-      MasterUsername: <username>
-      MasterUserPassword: <password>
-      VPCSecurityGroups:
-        - !Ref EC2ApplicationServerSecurityGroup
-      AllocatedStorage: '5'
-      MultiAZ: false
-
+      VPCZoneIdentifier:
+        - Ref: PrivateSubnet1
+        - Ref: PrivateSubnet2
+      LaunchConfigurationName:
+        Ref: LaunchConfigAppTier
+      MinSize: "2"
+      MaxSize: "2"
+  LaunchConfigAppTier:
+    Type: AWS::AutoScaling::LaunchConfiguration
+    Properties:
+      ImageId:
+        Ref: ImageId
+      InstanceType: t2.micro
+      SecurityGroups:
+        - Ref: EC2ApplicationServerSecurityGroup
 Outputs:
-  VPCID:
-    Description: VPC ID
-    Value: !Ref VPC
-    Export:
-      Name: !Sub "${AWS::StackName}-VPCID"
-  PublicSubnets:
-    Description: Public Subnets
+  VPCId:
+    Description: VPC Id
     Value:
-      - !Ref PublicSubnet1
-      - !Ref PublicSubnet2
-    Export:
-      Name: !Sub "${AWS::StackName}-PublicSubnets"
-  PrivateSubnets:
-    Description: Private Subnets
+      Ref: VPC
+  PublicSubnet1:
+    Description: Public Subnet1
     Value:
-      - !Ref PrivateSubnet1
-      - !Ref PrivateSubnet2
-    Export:
-      Name: !Sub "${AWS::StackName}-PrivateSubnets"
+      Ref: PublicSubnet1
+  PublicSubnet2:
+    Description: Public Subnet2
+    Value:
+      Ref: PublicSubnet2
+  PrivateSubnet1:
+    Description: Private Subnet1
+    Value:
+      Ref: PrivateSubnet1
+  PrivateSubnet2:
+    Description: Private Subnet2
+    Value:
+      Ref: PrivateSubnet2
